--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -115,13 +115,14 @@
 
     const SITE_LIST = [
       ['google', ''],
+      ['youtube', ''],
+      ['twitter', 'twitter.com/google'],
       ['flickr', ''],
       ['quora', 'www.quora.com/topic/JavaScript-programming-language'],
+      ['twitch', 'www.twitch.tv/'],
       ['reddit', ''],
       ['wiki', 'zh.wikipedia.org/'],
       ['gist', 'gist.github.com/'],
-      ['facebook', 'facebook.com/Google/'],
-      ['blogger', ''],
     ]
 
     function showIcons() {
