--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -34,10 +34,12 @@
   <div class="box">
     <button id="btnGo">Go</button>
   </div>
+  <!--
   <div class="box">
     <span>切换线路:</span>
     <select id="selNode"></select>
   </div>
+-->
   <div class="box" id="list">
   </div>
   <script>
@@ -115,16 +117,14 @@
 
     const SITE_LIST = [
       ['google', ''],
-      ['youtube', ''],
-      ['twitter', 'twitter.com/google'],
       ['flickr', ''],
       ['quora', 'www.quora.com/topic/JavaScript-programming-language'],
-      ['twitch', 'www.twitch.tv/'],
       ['reddit', ''],
       ['wiki', 'zh.wikipedia.org/'],
       ['gist', 'gist.github.com/'],
+      ['facebook', 'facebook.com/Google/'],
+      ['blogger', ''],
     ]
-
     function showIcons() {
       list.innerHTML = SITE_LIST.map(v => {
         let [id, url] = v
